# vg-number

./: .gitignore  AGENTS.md  README.md  pyproject.toml
matrix/: filters.py  matrix2d.py  spline.py
noise/generators/: domain_warp.py
pathfinding/: __init__.py  test_pathfinding.py
