[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vg-number"
version = "0.1.0"
readme = "README.md"
authors = [
  { name = "Adrian R. Espinosa", email = "espinosa012@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy"
]

[tool.setuptools.packages.find]
include = ["matrix*", "noise*", "pathfinding*", "utils*"]
